--- a/src/app/components/new-contact/new-contact.component.css
+++ b/src/app/components/new-contact/new-contact.component.css
@@ -105,7 +105,7 @@
   border-radius: 10px;
   z-index: 100;
   transform: translate(-50%, 0);
-  transition: transform .3s ease-out, opacity .15s linear;
+  transition: transform .3s ease-out, opacity .15s linear, visibility .15s linear;
 }
 
 .new-contact__people.show, .new-contact__group.show {
@@ -235,6 +235,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 12px 15px;
+  cursor: pointer;
 }
 
 .new-contact__common__item__content {
