--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -1,8 +1,8 @@
 <button class="custom-button button-light" (click)="toggleSearch()">
   <i class="fa-solid fa-magnifying-glass"></i>
 </button>
-<div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
-  <button type="button" (click)="searchMessage(valueSearch)"><i class="fa-solid fa-magnifying-glass"></i></button>
+<div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'" (submit)="searchMessage()">
+  <button type="submit" (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
   <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch">
   <div class="move-message ">
     <span style="margin-right: 30px;">{{position}}/{{searching.length}}</span>
