--- a/src/app/components/box-chat/box-chat.component.css
+++ b/src/app/components/box-chat/box-chat.component.css
@@ -291,5 +291,8 @@ app-forward {
 
 
 
-
+/*active message search*/
+.chat-conversation__message-container__message.active-message {
+  background-color: #3fcc35 !important;
+}
 
