--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -2,7 +2,7 @@
   <i class="fa-solid fa-magnifying-glass"></i>
 </button>
 <div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
-  <button type="button" (click)="searchMessage(valueSearch)"><i class="fa-solid fa-magnifying-glass"></i></button>
+  <button type="button" (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
   <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch">
   <div class="move-message ">
     <span style="margin-right: 30px;">{{position}}/{{searching.length}}</span>
