--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,29 +9,32 @@
       <form class="form" [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="form__input">
           <label for="name">Username</label>
-          <input id="name" type="text" placeholder="Write your username..." formControlName="username" required>
+          <input id="name" class="mb-2" type="text" placeholder="Write your username..." formControlName="username" required>
           <ng-container
             *ngIf="loginForm.controls.username.invalid && (loginForm.controls.username.dirty || loginForm.controls.username.touched)">
             <ng-container *ngIf="loginForm.controls.username.errors">
               <ng-container *ngIf="loginForm.controls.username.errors?.['required']">
-                <small class="form-text text-danger">*Please fill in username</small>
+                <small class="form-text text-danger fw-bold" style="font-size: 12px">*Please fill in username</small>
               </ng-container>
             </ng-container>
           </ng-container>
         </div>
-        <div class="form__input">
+        <div class="form__input eye-password">
           <label for="password">Password</label>
-          <input id="password" type="password" placeholder="Write your username..." formControlName="password" required>
+          <input id="password" class="mb-2" type="password" placeholder="Write your username..." formControlName="password" required>
+          <div class="eye" [ngClass]="loginForm.controls.password.value != '' ? 'show': 'hidden'"  (click)="toggleEye(1)">
+            <i class="fa-solid fa-eye"></i>
+          </div>
           <ng-container
             *ngIf="loginForm.controls.password.invalid && (loginForm.controls.password.dirty || loginForm.controls.password.touched)">
             <ng-container *ngIf="loginForm.controls.password.errors">
               <ng-container *ngIf="loginForm.controls.password.errors?.['required']">
-                <small class="form-text text-danger">*Please fill in password</small><br>
+                <small class="form-text text-danger fw-bold " style="font-size: 12px;">*Please fill in password</small><br>
               </ng-container>
             </ng-container>
           </ng-container>
           <ng-container *ngIf="responseLogin">
-            <small class="text-danger form-text">*{{responseLogin}}</small>
+            <small class="text-danger form-text fw-bold" style="font-size: 12px">*{{responseLogin}}</small>
           </ng-container>
         </div>
         <div class="form__buttons">
