--- a/src/app/components/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-bar/chat-bar.component.html
@@ -17,8 +17,7 @@
           </ng-container>
         </div>
       </ng-container>
-      <input placeholder="Write your message..." type="text" name="message" [(ngModel)]="message"
-             (ngModelChange)="changeMessage($event)">
+      <input placeholder="Write your message..." type="text" name="message" [(ngModel)]="message">
     </div>
     <button class="custom-button send-button" type="submit">
       <i class="fa-solid fa-paper-plane"></i>
