--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,8 +13,11 @@
     <div class="sidebar__group-button">
       <input id="theme" type="checkbox" [checked]="theme$ | async" (change)="toggleTheme()"/>
       <label class="dark-mode__button" for="theme">
-        <i class="fa-solid fa-sun sun"></i>
-        <i class="fa-solid fa-moon moon"></i>
+        <div class="dark-mode__button__icon">
+          <i class="fa-solid fa-sun sun"></i>
+          <i class="fa-solid fa-moon moon"></i>
+        </div>
+        <p class="dark-mode__button__name">Dark mode</p>
       </label>
       <button class="custom-button button-light" (click)="handleLogout()">
         <i class="fa-solid fa-power-off"></i>
