--- a/src/app/components/chat-bar/chat-bar.component.css
+++ b/src/app/components/chat-bar/chat-bar.component.css
@@ -93,6 +93,22 @@
   height: 80px;
 }
 
+.box-chat__content__form__box-images__item__percentage {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, .5);
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #eff1f2;
+}
+
 .box-chat__content__form__box-images__item-remove {
   display: flex;
   justify-content: center;
@@ -105,7 +121,8 @@
   color: #ff4e2b;
   border-radius: 50%;
   border: 1px solid #ff4e2b;
-  background-color: #eff1f2;
+  background-color: white;
+  z-index: 10;
 }
 
 .box-chat__content__form__box-images__item img {
