--- a/src/app/components/new-contact/new-contact.component.html
+++ b/src/app/components/new-contact/new-contact.component.html
@@ -19,13 +19,17 @@
   <div class="new-contact__people new-contact__common" [ngClass]="isOpenedPeople ? 'show':'hidden'">
     <div class="new-contact__common__header">
       <h5>Create new chat</h5>
-      <button (click)="close()"><i class="fa-solid fa-xmark"></i></button>
+      <button (click)="close()">
+        <i class="fa-solid fa-xmark"></i></button>
     </div>
     <div class="new-contact__common__content">
       <div class="new-contact__common__form">
         <div class="new-contact__common__form__container">
           <input type="text" placeholder="Create new chat" [(ngModel)]="newContact">
-          <button (click)="handleAddPeople()"><i class="fa-solid fa-plus"></i></button>
+          <button (click)="handleAddPeople()">
+            <i class="fa-solid fa-plus"></i>
+            <p>Add people</p>
+          </button>
         </div>
       </div>
       <div class="new-contact__common__list">
@@ -85,7 +89,7 @@
           <div *ngIf="room.type==='room'" class="new-contact__common__item" (click)="handleChangeRoom(room)">
             <div class="new-contact__common__item__content">
               <div class="new-contact__common__item__avatar">
-                <img src="assets/images/user.jpg" alt="avatar">
+                <img src="assets/images/group.jpg" alt="avatar">
               </div>
               <div class="d-flex flex-column gap-0">
                 <p class="new-contact__common__item__name">{{room.name || 'Anonymous'}}</p>
