--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -5,8 +5,10 @@
 <div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'" (submit)="searchMessage()">
   <button type="submit" (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
   <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch">
-  <div class="move-message ">
-    <span style="margin-right: 30px;">{{position}}/{{searching.length}}</span>
+  <div class="move-message">
+    <span style="font-size:14px;font-weight: 600;margin-right: 30px;">
+      {{position}}/{{searching.length}}
+    </span>
     <button class="up-mess" (click)="changePosition(-1)">
       <i class="fa-solid fa-arrow-down"></i>
     </button>
