--- a/src/app/components/upload-file/upload-file.component.html
+++ b/src/app/components/upload-file/upload-file.component.html
@@ -4,4 +4,7 @@
           (click)="handleRemoveImage(image)">
     <i class="fa-solid fa-xmark"></i>
   </button>
+  <div *ngIf="percentage | async as pct" class="box-chat__content__form__box-images__item__percentage">
+    {{pct | number}}%
+  </div>
 </div>
