--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -1,9 +1,9 @@
 <button class="custom-button button-light" (click)="toggleSearch()">
   <i class="fa-solid fa-magnifying-glass"></i>
 </button>
-<div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
-  <button type="button" (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
-  <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch">
+<div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'"  >
+  <button (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
+  <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch" (change)="searchMessage()">
   <div class="move-message ">
     <span style="margin-right: 30px;">{{position}}/{{searching.length}}</span>
     <button class="up-mess" (click)="changePosition(-1)">
@@ -13,5 +13,5 @@
       <i class="fa-solid fa-arrow-up"></i>
     </button>
   </div>
-  <button type="button" (click)="toggleSearch()"><i class="fa-solid fa-xmark"></i></button>
+  <button (click)="toggleSearch()"><i class="fa-solid fa-xmark"></i></button>
 </div>
