--- a/src/app/components/new-contact/new-contact.component.css
+++ b/src/app/components/new-contact/new-contact.component.css
@@ -307,3 +307,14 @@
 .new-contact__common__list::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+.forward__notification_people,.forward__notification_group{
+  width: 100%;
+  height: 20px;
+  color: red;
+}
+.forward__notification_people.hidden,.forward__notification_group.hidden{
+  display: none;
+}
+.forward__notification_people.show,.forward__notification_group.show{
+  display: block;
+}
