fix bugs new-contact

--- a/src/app/components/new-contact/new-contact.component.html
+++ b/src/app/components/new-contact/new-contact.component.html
@@ -25,16 +25,13 @@
     <div class="new-contact__common__content">
       <div class="new-contact__common__form">
         <div class="new-contact__common__form__container">
-          <input type="text" placeholder="Create new chat" [(ngModel)]="newContact" [(ngModel)]="data">
-       
           <input type="text" placeholder="Create new chat" [(ngModel)]="newContact">
           <button (click)="handleAddPeople()">
             <i class="fa-solid fa-plus"></i>
             <p>Add people</p>
           </button>
         </div>
-        <div class="forward__notification_people" [ngClass]="isNotification?'show':'hidden'" [(ngModel)]="contentPeople">hell</div>
-
+        <div class="forward__notification_people" [ngClass]="isNotification?'show':'hidden'">hell</div>
       </div>
       <div class="new-contact__common__list">
         <ng-container *ngFor="let room of rooms">
@@ -77,7 +74,7 @@
     <div class="new-contact__common__content">
       <div class="new-contact__common__form">
         <div class="new-contact__common__form__container">
-          <input type="text" placeholder="Create or join new room..." [(ngModel)]="newContact" [(ngModel)]="data">
+          <input type="text" placeholder="Create or join new room..." [(ngModel)]="newContact" name="new">
           <button (click)="handleCreateRoom()">
             <i class="fa-solid fa-plus"></i>
             <p>Create room</p>
@@ -87,7 +84,7 @@
             <p>Join room</p>
           </button>
         </div>
-        <div class="forward__notification_group" [ngClass]="isNotification?'show':'hidden'" [(ngModel)]="contentGroup">hello</div>
+        <div class="forward__notification_group" [ngClass]="isNotification?'show':'hidden'">hello</div>
       </div>
       <div class="new-contact__common__list">
         <ng-container *ngFor="let room of rooms">
