--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -1,9 +1,8 @@
 <button class="custom-button button-light" (click)="toggleSearch()">
   <i class="fa-solid fa-magnifying-glass"></i>
 </button>
-<div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'"  >
-  <button (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
-  
+<div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
+  <button type="button" (click)="searchMessage()"><i class="fa-solid fa-magnifying-glass"></i></button>
   <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch" (change)="searchMessage()">
   <div class="move-message">
     <span style="font-size:14px;font-weight: 600;margin-right: 30px;">
