--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,8 @@
                          (changeRoom)="changeRoom($event)"
                          (addPeople)="addPeople($event)"
                          (joinRoom)="joinRoom($event)"
-                         (createRoom)="createRoom($event)">
+                         (createRoom)="createRoom($event)"
+                         [messageNewContact]="messageNewContact">
         </app-new-contact>
       </div>
       <div class="box-chat__content position-relative">
