--- a/src/app/components/new-contact/new-contact.component.css
+++ b/src/app/components/new-contact/new-contact.component.css
@@ -313,6 +313,8 @@
   width: 100%;
   height: 20px;
   color: red;
+  font-weight: bold;
+  font-size: 14px;
 }
 .forward__notification_people.hidden,.forward__notification_group.hidden{
   display: none;
